--- a/style.css
+++ b/style.css
@@ -97,10 +97,6 @@
        top: 10px;
    }
    
-   .f-menu:hover {
-       color: rgb(248, 153, 136);
-   }
-   
    .s-menu {
        position: absolute;
        width: 150px;
@@ -127,7 +123,7 @@
    }
    
    #center {
-       height: 2000px;
+       height: auto;
        text-align: center;
    }
    
@@ -140,9 +136,10 @@
        border-radius: 5px;
        position: sticky;
        top: 65px;
+       margin-bottom: 200px;
    }
    
-   #main {
+   .main {
        vertical-align: top;
        margin: 200px 20px 100px 20px;
        display: inline-block;
@@ -153,13 +150,38 @@
        padding: 40px 70px;
    }
    
-   #psg {
+   #edit {
+       display: none;
+       height: 1000px;
+   }
+   
+   #edit div {
+       display: inline-block;
+   }
+   /* 123123 */
+   
+   #moren {
+       display: none;
+   }
+   
+   #edit {
+       display: inline-block;
+   }
+   /* 123123 */
+   
+   .word {
        height: 1100px;
        text-align: left;
        line-height: 50px;
+       font-weight: 500;
+       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    }
    
-   #main h1 {
+   #test {
+       color: tomato;
+   }
+   
+   .main h1 {
        color: #5E72E4;
        font-weight: 700;
        text-align: center;
@@ -235,7 +257,7 @@
    }
    
    .ipt {
-       width: 80%;
+       width: 220px;
        height: 30px;
        margin: 10px 10px;
        color: #34495e;
