--- a/style.css
+++ b/style.css
@@ -159,14 +159,13 @@
        display: inline-block;
    }
    /* 123123 */
-   
-   #moren {
+   /* #moren {
        display: none;
    }
    
    #edit {
        display: inline-block;
-   }
+   } */
    /* 123123 */
    
    .word {
