--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@
        display: inline-block;
        width: 15%;
        position: relative;
-       margin-top: 200px;
+       margin-top: 150px;
        vertical-align: top;
        border-radius: 5px;
        position: sticky;
@@ -141,7 +141,7 @@
    
    .main {
        vertical-align: top;
-       margin: 200px 20px 100px 20px;
+       margin: 150px 20px 100px 20px;
        display: inline-block;
        width: 60%;
        height: 2000px;
@@ -157,6 +157,28 @@
    
    #edit div {
        display: inline-block;
+       margin: 30px 20px;
+   }
+   
+   #edit h3 {
+       display: inline-block;
+   }
+   
+   #subm {
+       width: 180px;
+       height: 50px;
+       background: linear-gradient(150deg, #7795f8 15%, #6772e5 70%, #555abf 94%);
+       border-radius: 5px;
+       color: white;
+       font-weight: 500;
+       font-size: 30px;
+       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+       margin-top: 20px;
+       padding-top: 10px;
+   }
+   
+   #subm:hover {
+       background: linear-gradient(150deg, #647dd1 15%, #4f57b1 70%, #3d418a 94%);
    }
    /* 123123 */
    /* #moren {
