--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@
    #header-bar {
        width: 100%;
        height: 4%;
-       background-color: rgba(44, 62, 80, 0);
+       background: linear-gradient(150deg, #5e60e4 0%, #7780f8 10%, #25a4ff 100%);
        padding-top: 10px;
        position: relative;
        top: 0px;
